<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ourdataindigenous</string>
    <string name="title_home">Home</string>
    <string name="title_begin">Begin</string>
    <string name="title_dashboard">About</string>
    <string name="title_project">Project</string>
    <string name="title_survey">Survey</string>
    <string name="title_culture">Cul/Res</string>
    <string name="title_more">More</string>
    <string name="about_project">About our project</string>
    <string name="take_survey">Take the survey</string>
    <string name="culture_resilience">Culture/Resilience</string>
    <string name="past_submissions">View past submissions</string>
    <string name="restricted_result_send">Don\'t send results to server</string>
    <string name="delete_participation_code">Delete participation code</string>
    <string name="home_title">OUR DATA INDIGENOUS</string>
    <string name="home_desc">An Indigenous-led initiative to support communities and organizations as they create and have full ownership of surveys that can generate data about important topics such as health, language, and food sovereignty.</string>
    <string name="home_select">Begin by selecting an activity below</string>
    <string name="codeBelow">Please enter your participant code below</string>
    <string name="internet_connection">This step require an Internet connection</string>
    <string name="dont_have_code">If you don\'t have a participant code, contact your local health coordinator or member of Our Data Indigenous team</string>
    <string name="participant_code">participant code</string>
    <string name="submit">Submit</string>
    <string name="media_content">The app needs to fetch media content from the server</string>
    <string name="download_content">Download Content</string>
    <string name="about_project_tab">About Project</string>
    <string name="about_us">About Us</string>
    <string name="culture">Culture</string>
    <string name="resilience">Resilience</string>
    <string name="about_survey">About Survey</string>
    <string name="take_survey_tab">Take Survey</string>
    <string name="cancel">Cancel</string>
    <string name="consent_and_continue">Consent and continue</string>
    <string name="before_continuing">Before continuing please read and consent to the following</string>
    <string name="are_you_sure">Are you sure you wish to %s?</string>
    <string name="submitted_on">Saved on %s</string>
    <string name="fetch_new_content">Fetch new content from the server</string>
    <string name="download_manifest">Downloading manifest</string>
    <string name="past_completed_surveys">Past completed surveys are ready to be uploaded</string>
    <string name="uploading_answers">Uploading answers…</string>
    <string name="checking_internet">Checking internet connection…</string>
    <string name="reset_data">Reset Data</string>
    <string name="reset_desc">This will delete your participant code, any saved questionnaires and answers, and any downloaded media. Are you sure you wish to reset data?</string>
    <string name="file_not_found">File not found</string>
    <string name="not_found_desc">This content has not been downloaded. Please refresh content and try again.</string>
    <string name="no_connection">No Connection</string>
    <string name="no_connection_desc">Your device does not appear to have an Internet connection. Please establish a connection and try again.</string>
    <string name="error">Error</string>
    <string name="code_not_valid">Code is not associated with any user. Please try again.</string>
    <string name="updating_questionnaires">Updating questionnaires \n from server…</string>
</resources>