<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tl="http://schemas.android.com/apk/res-auto"
    android:background="@color/whiteText"
    android:orientation="vertical"
    tools:context=".ui.survey.NotificationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.dueeeke.tablayout.SegmentTabLayout
            android:id="@+id/tabAbout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center_horizontal"
            app:tl_bar_color="@color/tabBg"
            app:tl_indicator_color="@color/whiteText"
            app:tl_indicator_corner_radius="@dimen/_5sdp"
            app:tl_textSelectColor="@color/blueText"
            app:tl_textSize="@dimen/_13ssp"
            app:tl_textUnselectedColor="@color/blackText"
            tl:tl_indicator_anim_enable="true"
            tl:tl_indicator_bounce_enable="false"
            tl:tl_indicator_margin_bottom="@dimen/_3sdp"
            tl:tl_indicator_margin_left="@dimen/_3sdp"
            tl:tl_indicator_margin_right="@dimen/_3sdp"
            tl:tl_indicator_margin_top="@dimen/_3sdp"
            tl:tl_tab_space_equal="true" />

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayBg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_60sdp"
        android:paddingRight="@dimen/_60sdp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/codeBelow"
            android:textColor="@color/whiteText"
            android:textSize="@dimen/_20ssp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_white_rounded"
            android:gravity="center"
            android:importantForAutofill="no"
            android:hint="@string/participant_code"
            android:padding="@dimen/_5sdp"
            android:inputType="text"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/blueTextLight"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/blueText"
            android:textSize="@dimen/_14ssp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/internet_connection"
            android:textColor="@color/greenText"
            android:textSize="@dimen/_16ssp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dont_have_code"
            android:textColor="@color/whiteText"
            android:textSize="@dimen/_16ssp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/blueText"
            android:textSize="@dimen/_16ssp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>